# ecommerce-browser-gym

./: .gitignore  DESIGN.md  DIFFERENTIATOR_ANALYSIS.md  MILESTONES.md  PIXEL_VS_JSON.md  README.md  TASKS.md  WALKTHROUGH.md  pyproject.toml
agents/: llm_agent.py  oracle_agent.py  pixel_agent.py
eval/: compare.py  pass_k.py  run.py
harness/: runner.py  som.py
scripts/: start_server.sh
server/: catalog.py  main.py  mutations.py  state.py  tasks.py  verifiers.py
tests/: conftest.py  test_mutations.py  test_som.py  test_verifiers.py
trajectories/llm/: A1_buy_wireless_mouse__0__66954839.jsonl  A1_buy_wireless_mouse__0__9d96614a.jsonl  A2_filter_laptop__0__d09ff13b.jsonl  A3_configure_bundle__0__0d509cb5.jsonl  B1_add_address__0__0cad39f4.jsonl  B2_track_and_return__0__624fd2df.jsonl  B3_account_overhaul__0__4273e51c.jsonl  C1_promo_partial__0__88e8fe51.jsonl  C2_split_shipping_gift__0__39fe934d.jsonl  C3_subscription_loyalty__0__c9888311.jsonl  _scorecard.json
ui/pages/: _checkout_progress.html  _layout.html  account_addresses.html  account_hub.html  account_order_detail.html  account_orders.html  account_payments.html  account_returns.html  account_security.html  account_subscriptions.html  cart.html  category.html  checkout_address.html  checkout_payment.html  checkout_review.html  deals.html  home.html  login.html  not_found.html  order_confirmation.html  product.html  product_not_found.html  return_form.html  search.html  tracking_modal.html
ui/static/: agent_cursor.js  app.js  style.css
