[project]
name = "ecommerce-browser-gym"
version = "0.1.0"
description = "A production-grade browser-agent RL gym for e-commerce. Real browser, real clicks, multi-step tasks, per-step milestone verifiers."
requires-python = ">=3.10"

dependencies = [
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.5",
  "jinja2>=3.1",
  "itsdangerous>=2.1",            # signed session cookies
  "python-multipart>=0.0.9",
  "httpx>=0.27",
  "playwright>=1.48",
  "anthropic>=0.40",
  "openai>=1.30",
  "litellm>=1.40",
  "pillow>=10.0",                 # Set-of-Mark image annotation
]

[project.optional-dependencies]
agent = [
  "browser-use>=0.1.40",          # primary browser agent
]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.5",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["server", "harness", "agents", "eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
